made the swagger yaml model match the database schema for person. added /newuser removed post /profiles
